Se agrega parcial 1 pagina de notcias con cambios

--- a/PARCIAL1/PaginaWeb.HTML
+++ b/PARCIAL1/PaginaWeb.HTML
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <Header class="header-content">
+    <Header class="header">
         <H1>Noticias HOY. </H1>
         <nav>
-            <ul class="nav-links">
+            <ul class="links">
                 <a href="">Inicio</a>
                 <a href="">Noticias </a>
                 <a href="">Contacto </a>
@@ -39,7 +39,7 @@
         <p>Explora nuestras principales historias del día:</p>
     </section>
 </main>
-    <table class="noticias-seccion">
+    <table class="noticias">
         <tr>
             <td class="noticia">
                 <div class="noticia" id="tipografia">Bogotá inaugura nueva línea de TransMilenio</div>
@@ -63,7 +63,7 @@
         </tr>
     </table>
 
-<section class="noticias-ultima-hora">
+<section class="noticiasUltimaHora">
     <h2>Noticias de última hora</h2>
     <div class="cards-container">
         <div class="card">
